work on problem 1 - added map iteration step to load data from separate csv files

--- a/p8105_hw5_dm3175.Rmd
+++ b/p8105_hw5_dm3175.Rmd
@@ -6,25 +6,30 @@ output: github_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse)
+library(purrr)
+
 ```
 
-## R Markdown
+# Problem 1
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+## Load and Clean Data
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+First, the data from the longitudinal study was loaded and cleaned. The files were originally stored in separate csv files, but were loaded and combined into one dateframe using the `map` function. The `map` function iterates over the cells in the file name column and enters them into a new column in the data frame.  
 
-```{r cars}
-summary(cars)
+```{r}
+longit_file_names = tibble(files = list.files("./data"),
+                           path = str_c("./data/", files)) %>% 
+  janitor::clean_names() 
+
+longit_tidy = longit_file_names %>% 
+  mutate(patient_data = map(path, read_csv)) %>% 
+  unnest() %>% 
+  gather(key = week, value = obs, week_1:week_8)
+
+
 ```
 
-## Including Plots
 
-You can also embed plots, for example:
+# Problem 2
 
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
