work on problem 1 - added spaghetti plot of observations over time

--- a/p8105_hw5_dm3175.md
+++ b/p8105_hw5_dm3175.md
@@ -9,7 +9,9 @@ Problem 1
 Load and Clean Data
 -------------------
 
-First, the data from the longitudinal study was loaded and cleaned. The files were originally stored in separate csv files, but were loaded and combined into one dateframe using the `map` function. The `map` function iterates over the cells in the file name column and enters them into a new column in the data frame.
+First, the data from the longitudinal study was loaded and cleaned. The files were originally stored in separate csv files, but were loaded and combined into one dateframe using the `map` function. The `map` functionality iterates over the cells in the file name column to carry out the `read_csv` function, and enters the output into a new column in the data frame. Data was unnested after it was read in.
+
+Next, data was tidied using the `gather` function to organize all observations by week of observation. Using the information stored in the file name, columns for the `subject_id` and `week` were created. The `group_arm` variable was converted into a factor variable, and the `subject_id` and `week` into numeric.
 
 ``` r
 # Load list of file names into a data frame
@@ -30,6 +32,29 @@ longit_tidy = longit_file_names %>%
          week = as.double(week)) %>% 
   select(group_arm, subject_id, week, obs)
 ```
+
+Spaghetti Plot of All Subjects Over Time
+----------------------------------------
+
+A spaghetti plot of all subjects from control and experimental groups over time reveals that control group observations are consistently lower than experimental group observations over time. The differences appear to be diverging more over time, with earlier time points showing more overlap between the groups and later time points showing greater differences. The observation values for the experimental group appears to be increasing over time.
+
+``` r
+longit_tidy %>% 
+  group_by(subject_id, group_arm) %>% 
+  ggplot(aes(x = week, y = obs, color = group_arm, group = interaction(subject_id, group_arm))) + 
+  geom_line(se = FALSE) +
+  labs(
+    title = "Observations for Each Subject in Control and Experimental Groups, Weeks 1-8",
+    x = "Week",
+    y = "Observation",
+    caption = "Data from the Longitudinal Study"
+  ) + 
+  theme_bw()
+```
+
+    ## Warning: Ignoring unknown parameters: se
+
+![](p8105_hw5_dm3175_files/figure-markdown_github/unnamed-chunk-2-1.png)
 
 Problem 2
 =========
