--- a/p8105_hw5_dm3175.md
+++ b/p8105_hw5_dm3175.md
@@ -58,3 +58,118 @@ longit_tidy %>%
 
 Problem 2
 =========
+
+Load and Clean the Data
+-----------------------
+
+The next problem explores data gathered by the Washington Post on homicides in 50 large US cities. Data was read in from a CSV posted on GitHub.
+
+``` r
+url = "https://raw.githubusercontent.com/washingtonpost/data-homicides/master/homicide-data.csv"
+homicide_data = read_csv(url, na = "Unknown") %>% 
+  janitor::clean_names() %>% 
+  mutate(city_state = str_c(city, ", ", state))
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   uid = col_character(),
+    ##   reported_date = col_integer(),
+    ##   victim_last = col_character(),
+    ##   victim_first = col_character(),
+    ##   victim_race = col_character(),
+    ##   victim_age = col_integer(),
+    ##   victim_sex = col_character(),
+    ##   city = col_character(),
+    ##   state = col_character(),
+    ##   lat = col_double(),
+    ##   lon = col_double(),
+    ##   disposition = col_character()
+    ## )
+
+The dataset contains 52179 observations and 13 variables. A new variable `city_state` was created to concatenate the city and state variables. The variables in the dataset are:
+
+-   `uid` - unique identifier
+-   `reported_date` - date homicide reported
+-   `victim_last` and `victim_first` - name of victim
+-   `victim_race` - race of victim
+-   `victim_age` - age of victim
+-   `victim_sex` - sex of victim
+-   `city` - city of homicide
+-   `state` - state of homicide
+-   `city_state` - combination city, state
+-   `lat` and `lon` - latitude and longitude of homicide
+-   `disposition` - outcome of homicide with three options: "Closed by arest", "Closed without arrest", or "Open/No arrest"
+
+Homicides by City, State
+------------------------
+
+### Total Homicides
+
+The total number of homicides for each city, state is provided in the table below. Chicago, IL, Philadelphia, PA, and Houston, TX are the top three cities by total homicides.
+
+``` r
+homicide_data %>% 
+  group_by(city_state) %>% 
+  summarize(n = n()) %>%
+  arrange(desc(n)) %>% 
+  knitr::kable(digits = 1)
+```
+
+| city\_state        |     n|
+|:-------------------|-----:|
+| Chicago, IL        |  5535|
+| Philadelphia, PA   |  3037|
+| Houston, TX        |  2942|
+| Baltimore, MD      |  2827|
+| Detroit, MI        |  2519|
+| Los Angeles, CA    |  2257|
+| St. Louis, MO      |  1677|
+| Dallas, TX         |  1567|
+| Memphis, TN        |  1514|
+| New Orleans, LA    |  1434|
+| Las Vegas, NV      |  1381|
+| Washington, DC     |  1345|
+| Indianapolis, IN   |  1322|
+| Kansas City, MO    |  1190|
+| Jacksonville, FL   |  1168|
+| Milwaukee, wI      |  1115|
+| Columbus, OH       |  1084|
+| Atlanta, GA        |   973|
+| Oakland, CA        |   947|
+| Phoenix, AZ        |   914|
+| San Antonio, TX    |   833|
+| Birmingham, AL     |   800|
+| Nashville, TN      |   767|
+| Miami, FL          |   744|
+| Cincinnati, OH     |   694|
+| Charlotte, NC      |   687|
+| Oklahoma City, OK  |   672|
+| San Francisco, CA  |   663|
+| Pittsburgh, PA     |   631|
+| New York, NY       |   627|
+| Boston, MA         |   614|
+| Tulsa, OK          |   583|
+| Louisville, KY     |   576|
+| Fort Worth, TX     |   549|
+| Buffalo, NY        |   521|
+| Fresno, CA         |   487|
+| San Diego, CA      |   461|
+| Stockton, CA       |   444|
+| Richmond, VA       |   429|
+| Baton Rouge, LA    |   424|
+| Omaha, NE          |   409|
+| Albuquerque, NM    |   378|
+| Long Beach, CA     |   378|
+| Sacramento, CA     |   376|
+| Minneapolis, MN    |   366|
+| Denver, CO         |   312|
+| Durham, NC         |   276|
+| San Bernardino, CA |   275|
+| Savannah, GA       |   246|
+| Tampa, FL          |   208|
+| Tulsa, AL          |     1|
+
+### Unsolved Homicides
+
+The total number of unsolved homicides (those with disposition of “Closed without arrest” or “Open/No arrest”) are provided in the table below.
