--- a/p8105_hw5_dm3175.md
+++ b/p8105_hw5_dm3175.md
@@ -67,8 +67,7 @@ The next problem explores data gathered by the Washington Post on homicides in 5
 ``` r
 url = "https://raw.githubusercontent.com/washingtonpost/data-homicides/master/homicide-data.csv"
 homicide_data = read_csv(url, na = "Unknown") %>% 
-  janitor::clean_names() %>% 
-  mutate(city_state = str_c(city, ", ", state))
+  janitor::clean_names() 
 ```
 
     ## Parsed with column specification:
@@ -87,7 +86,14 @@ homicide_data = read_csv(url, na = "Unknown") %>%
     ##   disposition = col_character()
     ## )
 
-The dataset contains 52179 observations and 13 variables. A new variable `city_state` was created to concatenate the city and state variables. The variables in the dataset are:
+``` r
+# Clean error in state "AL" to "OK" for Tul-000769
+clean_homicide_data = homicide_data %>% 
+  mutate(state = ifelse(uid == "Tul-000769", "OK", state)) %>% 
+  mutate(city_state = str_c(city, ", ", state))
+```
+
+The dataset contains 52179 observations and 12 variables. A new variable `city_state` was created to concatenate the city and state variables. The variables in the dataset are:
 
 -   `uid` - unique identifier
 -   `reported_date` - date homicide reported
@@ -101,75 +107,101 @@ The dataset contains 52179 observations and 13 variables. A new variable `city_s
 -   `lat` and `lon` - latitude and longitude of homicide
 -   `disposition` - outcome of homicide with three options: "Closed by arest", "Closed without arrest", or "Open/No arrest"
 
+An error in the original data table listed "Tulsa, AL" as a location; however, the coordinates actually corresponded to "Tulsa, OK". Therefore, the state was fixed to Oklahoma in the clean dataset.
+
 Homicides by City, State
 ------------------------
 
-### Total Homicides
+### Total Homicides and Unsolved Homicides in All Cities
 
-The total number of homicides for each city, state is provided in the table below. Chicago, IL, Philadelphia, PA, and Houston, TX are the top three cities by total homicides.
+The total number of homicides and unsolved homicides for each city, state is provided in the table below.
 
 ``` r
-homicide_data %>% 
+total_hom_count = clean_homicide_data %>% 
   group_by(city_state) %>% 
-  summarize(n = n()) %>%
-  arrange(desc(n)) %>% 
+  summarize(n_total_homicides = n())
+
+unsolved_hom_count = clean_homicide_data %>% 
+  filter(disposition == "Closed without arrest" | disposition == "Open/No arrest") %>% 
+  group_by(city_state) %>% 
+  summarize(n_unsolved_homicide = n())
+
+homicide_counts = full_join(total_hom_count, unsolved_hom_count, by = "city_state") %>% 
+  arrange(desc(n_total_homicides))
+
+homicide_counts %>% 
   knitr::kable(digits = 1)
 ```
 
-| city\_state        |     n|
-|:-------------------|-----:|
-| Chicago, IL        |  5535|
-| Philadelphia, PA   |  3037|
-| Houston, TX        |  2942|
-| Baltimore, MD      |  2827|
-| Detroit, MI        |  2519|
-| Los Angeles, CA    |  2257|
-| St. Louis, MO      |  1677|
-| Dallas, TX         |  1567|
-| Memphis, TN        |  1514|
-| New Orleans, LA    |  1434|
-| Las Vegas, NV      |  1381|
-| Washington, DC     |  1345|
-| Indianapolis, IN   |  1322|
-| Kansas City, MO    |  1190|
-| Jacksonville, FL   |  1168|
-| Milwaukee, wI      |  1115|
-| Columbus, OH       |  1084|
-| Atlanta, GA        |   973|
-| Oakland, CA        |   947|
-| Phoenix, AZ        |   914|
-| San Antonio, TX    |   833|
-| Birmingham, AL     |   800|
-| Nashville, TN      |   767|
-| Miami, FL          |   744|
-| Cincinnati, OH     |   694|
-| Charlotte, NC      |   687|
-| Oklahoma City, OK  |   672|
-| San Francisco, CA  |   663|
-| Pittsburgh, PA     |   631|
-| New York, NY       |   627|
-| Boston, MA         |   614|
-| Tulsa, OK          |   583|
-| Louisville, KY     |   576|
-| Fort Worth, TX     |   549|
-| Buffalo, NY        |   521|
-| Fresno, CA         |   487|
-| San Diego, CA      |   461|
-| Stockton, CA       |   444|
-| Richmond, VA       |   429|
-| Baton Rouge, LA    |   424|
-| Omaha, NE          |   409|
-| Albuquerque, NM    |   378|
-| Long Beach, CA     |   378|
-| Sacramento, CA     |   376|
-| Minneapolis, MN    |   366|
-| Denver, CO         |   312|
-| Durham, NC         |   276|
-| San Bernardino, CA |   275|
-| Savannah, GA       |   246|
-| Tampa, FL          |   208|
-| Tulsa, AL          |     1|
+| city\_state        |  n\_total\_homicides|  n\_unsolved\_homicide|
+|:-------------------|--------------------:|----------------------:|
+| Chicago, IL        |                 5535|                   4073|
+| Philadelphia, PA   |                 3037|                   1360|
+| Houston, TX        |                 2942|                   1493|
+| Baltimore, MD      |                 2827|                   1825|
+| Detroit, MI        |                 2519|                   1482|
+| Los Angeles, CA    |                 2257|                   1106|
+| St. Louis, MO      |                 1677|                    905|
+| Dallas, TX         |                 1567|                    754|
+| Memphis, TN        |                 1514|                    483|
+| New Orleans, LA    |                 1434|                    930|
+| Las Vegas, NV      |                 1381|                    572|
+| Washington, DC     |                 1345|                    589|
+| Indianapolis, IN   |                 1322|                    594|
+| Kansas City, MO    |                 1190|                    486|
+| Jacksonville, FL   |                 1168|                    597|
+| Milwaukee, wI      |                 1115|                    403|
+| Columbus, OH       |                 1084|                    575|
+| Atlanta, GA        |                  973|                    373|
+| Oakland, CA        |                  947|                    508|
+| Phoenix, AZ        |                  914|                    504|
+| San Antonio, TX    |                  833|                    357|
+| Birmingham, AL     |                  800|                    347|
+| Nashville, TN      |                  767|                    278|
+| Miami, FL          |                  744|                    450|
+| Cincinnati, OH     |                  694|                    309|
+| Charlotte, NC      |                  687|                    206|
+| Oklahoma City, OK  |                  672|                    326|
+| San Francisco, CA  |                  663|                    336|
+| Pittsburgh, PA     |                  631|                    337|
+| New York, NY       |                  627|                    243|
+| Boston, MA         |                  614|                    310|
+| Tulsa, OK          |                  584|                    193|
+| Louisville, KY     |                  576|                    261|
+| Fort Worth, TX     |                  549|                    255|
+| Buffalo, NY        |                  521|                    319|
+| Fresno, CA         |                  487|                    169|
+| San Diego, CA      |                  461|                    175|
+| Stockton, CA       |                  444|                    266|
+| Richmond, VA       |                  429|                    113|
+| Baton Rouge, LA    |                  424|                    196|
+| Omaha, NE          |                  409|                    169|
+| Albuquerque, NM    |                  378|                    146|
+| Long Beach, CA     |                  378|                    156|
+| Sacramento, CA     |                  376|                    139|
+| Minneapolis, MN    |                  366|                    187|
+| Denver, CO         |                  312|                    169|
+| Durham, NC         |                  276|                    101|
+| San Bernardino, CA |                  275|                    170|
+| Savannah, GA       |                  246|                    115|
+| Tampa, FL          |                  208|                     95|
 
-### Unsolved Homicides
+Chicago, IL, Philadelphia, PA, and Houston, TX are the top three cities by total homicides. The table also presents the total number of unsolved homicides (those with disposition of “Closed without arrest” or “Open/No arrest”). Chicago, IL had the largest number of unsolved homicides with 4073. Baltimore, MD has the second largest number of unsolved homicides with 1825. The city with the least unsolved homicides was Tampa, FL with 95. Tulsa, AL had no unsolved homicides reported.
 
-The total number of unsolved homicides (those with disposition of “Closed without arrest” or “Open/No arrest”) are provided in the table below.
+### Unsolved Homicides in Baltimore, MD
+
+``` r
+prop.test(x = 750, n = 2205, p = 0.30, alternative = "greater", conf.level = 0.95, correct = FALSE)
+```
+
+    ## 
+    ##  1-sample proportions test without continuity correction
+    ## 
+    ## data:  750 out of 2205, null probability 0.3
+    ## X-squared = 16.914, df = 1, p-value = 1.955e-05
+    ## alternative hypothesis: true p is greater than 0.3
+    ## 95 percent confidence interval:
+    ##  0.323746 1.000000
+    ## sample estimates:
+    ##         p 
+    ## 0.3401361
