--- a/p8105_hw5_dm3175.Rmd
+++ b/p8105_hw5_dm3175.Rmd
@@ -119,8 +119,31 @@ Chicago, IL, Philadelphia, PA, and Houston, TX are the top three cities by total
 
 ### Unsolved Homicides in Baltimore, MD
 
-
+One sample test of the proportion of unsolved homicides in Baltimore, MD using `prop.test`: 
 ```{r}
-prop.test(x = 750, n = 2205, p = 0.30, alternative = "greater", conf.level = 0.95, correct = FALSE)
+baltimore_prop = prop.test(x = filter(homicide_counts, city_state == "Baltimore, MD") %>% pull(n_unsolved_homicide), 
+          n = filter(homicide_counts, city_state == "Baltimore, MD") %>% pull(n_total_homicides)) %>% 
+  broom::tidy()
+    
+baltimore_prop %>% select(estimate, conf.low, conf.high) %>% knitr::kable(digits = 5)
+
 ```
+
+
+### Unsolved Homicides in All Cities
+
+Next, the proportion tests were carried out for the proportion of unsolved homicides for all cities.  
+```{r}
+homicide_counts %>% 
+  mutate(prop_test = map2(.x = n_unsolved_homicide, .y = n_total_homicides, ~prop.test(x = .x, n = .y))) %>%
+  mutate(prop_test = map(prop_test, broom::tidy)) %>% 
+  unnest() %>% 
+  select(city_state, estimate, conf.low, conf.high)
+
+        
+
+
+```
+
+
 
