--- a/p8105_hw5_dm3175.md
+++ b/p8105_hw5_dm3175.md
@@ -190,18 +190,43 @@ Chicago, IL, Philadelphia, PA, and Houston, TX are the top three cities by total
 
 ### Unsolved Homicides in Baltimore, MD
 
+One sample test of the proportion of unsolved homicides in Baltimore, MD using `prop.test`:
+
 ``` r
-prop.test(x = 750, n = 2205, p = 0.30, alternative = "greater", conf.level = 0.95, correct = FALSE)
+baltimore_prop = prop.test(x = filter(homicide_counts, city_state == "Baltimore, MD") %>% pull(n_unsolved_homicide), 
+          n = filter(homicide_counts, city_state == "Baltimore, MD") %>% pull(n_total_homicides)) %>% 
+  broom::tidy()
+    
+baltimore_prop %>% select(estimate, conf.low, conf.high) %>% knitr::kable(digits = 5)
 ```
 
-    ## 
-    ##  1-sample proportions test without continuity correction
-    ## 
-    ## data:  750 out of 2205, null probability 0.3
-    ## X-squared = 16.914, df = 1, p-value = 1.955e-05
-    ## alternative hypothesis: true p is greater than 0.3
-    ## 95 percent confidence interval:
-    ##  0.323746 1.000000
-    ## sample estimates:
-    ##         p 
-    ## 0.3401361
+|  estimate|  conf.low|  conf.high|
+|---------:|---------:|----------:|
+|   0.64556|   0.62756|    0.66316|
+
+### Unsolved Homicides in All Cities
+
+Next, the proportion tests were carried out for the proportion of unsolved homicides for all cities.
+
+``` r
+homicide_counts %>% 
+  mutate(prop_test = map2(.x = n_unsolved_homicide, .y = n_total_homicides, ~prop.test(x = .x, n = .y))) %>%
+  mutate(prop_test = map(prop_test, broom::tidy)) %>% 
+  unnest() %>% 
+  select(city_state, estimate, conf.low, conf.high)
+```
+
+    ## # A tibble: 50 x 4
+    ##    city_state       estimate conf.low conf.high
+    ##    <chr>               <dbl>    <dbl>     <dbl>
+    ##  1 Chicago, IL         0.736    0.724     0.747
+    ##  2 Philadelphia, PA    0.448    0.430     0.466
+    ##  3 Houston, TX         0.507    0.489     0.526
+    ##  4 Baltimore, MD       0.646    0.628     0.663
+    ##  5 Detroit, MI         0.588    0.569     0.608
+    ##  6 Los Angeles, CA     0.490    0.469     0.511
+    ##  7 St. Louis, MO       0.540    0.515     0.564
+    ##  8 Dallas, TX          0.481    0.456     0.506
+    ##  9 Memphis, TN         0.319    0.296     0.343
+    ## 10 New Orleans, LA     0.649    0.623     0.673
+    ## # ... with 40 more rows
