--- a/p8105_hw5_dm3175.Rmd
+++ b/p8105_hw5_dm3175.Rmd
@@ -1,23 +1,30 @@
 ---
 title: "p8105_hw5_dm3175"
 author: "Devon Morgan"
-date: "11/5/2018"
+date: "11/8/2018"
 output: github_document
 ---
 
 ```{r setup, include=FALSE}
 library(tidyverse)
 library(purrr)
-
+knitr::opts_chunk$set(
+  fig.width = 10,
+  fig.asp = .6,
+  out.width = "90%"
+)
 ```
 
-# Problem 1
+# Homework 5
 
-## Load and Clean Data
+## Problem 1
+This problem investigates observation data from a longitudinal study with a control and experimental arm. 
+
+### Load and Clean Data
 
 First, the data from the longitudinal study was loaded and cleaned. The files were originally stored in separate csv files, but were loaded and combined into one dateframe using the `map` function. The `map` functionality iterates over the cells in the file name column to carry out the `read_csv` function, and enters the output into a new column in the data frame. Data was unnested after it was read in. 
 
-Next, data was tidied using the `gather` function to organize all observations by week of observation. Using the information stored in the file name, columns for the `subject_id` and `week` were created. The `group_arm` variable was converted into a factor variable, and the `subject_id` and `week` into numeric. 
+Next, data was tidied using the `gather` function to organize all observations by week of observation. Using the information stored in the file name, columns for the `subject_id` and `week` were created. The `group_arm` variable was converted into a factor variable, and the `subject_id` and `week` into numeric. `obs` contains the corresponding observation (numeric). 
 
 ```{r message = FALSE}
 # Load list of file names into a data frame
@@ -40,7 +47,7 @@ longit_tidy = longit_file_names %>%
 
 ```
 
-## Spaghetti Plot of All Subjects Over Time
+### Spaghetti Plot of All Subjects Over Time
 
 A spaghetti plot of all subjects from control and experimental groups over time reveals that control group observations are consistently lower than experimental group observations over time. The differences appear to be diverging more over time, with earlier time points showing more overlap between the groups and later time points showing greater differences. The observation values for the experimental group appears to be increasing over time.
 
@@ -59,11 +66,13 @@ longit_tidy %>%
 
 ```
 
-# Problem 2
+## Problem 2
 
-## Load and Clean the Data
+### Load and Clean the Data
 
 The next problem explores data gathered by the Washington Post on homicides in 50 large US cities. Data was read in from a CSV posted on GitHub.
+
+The data was collected from police departments selected for the survey. 
 
 ```{r}
 url = "https://raw.githubusercontent.com/washingtonpost/data-homicides/master/homicide-data.csv"
@@ -73,7 +82,8 @@ homicide_data = read_csv(url, na = "Unknown") %>%
 # Clean error in state "AL" to "OK" for Tul-000769
 clean_homicide_data = homicide_data %>% 
   mutate(state = ifelse(uid == "Tul-000769", "OK", state)) %>% 
-  mutate(city_state = str_c(city, ", ", state))
+  mutate(city_state = str_c(city, ", ", state), 
+         victim_race = fct_relevel(victim_race, "White"))
 
 ```
 
@@ -91,11 +101,11 @@ The dataset contains `r nrow(homicide_data)` observations and `r ncol(homicide_d
 *  `lat` and `lon` - latitude and longitude of homicide
 *  `disposition` - outcome of homicide with three options: "Closed by arest", "Closed without arrest", or "Open/No arrest"
 
-An error in the original data table listed "Tulsa, AL" as a location; however, the coordinates actually corresponded to "Tulsa, OK". Therefore, the state was fixed to Oklahoma in the clean dataset.  
+An error in the original data table listed "Tulsa, AL" as a location for one observation (Tul-000769); however, the coordinates actually corresponded to "Tulsa, OK". Therefore, the state was fixed to Oklahoma in the clean dataset.  
 
-## Homicides by City, State
+### Homicides by City, State
 
-### Total Homicides and Unsolved Homicides in All Cities
+#### Total Homicides and Unsolved Homicides in All Cities
 The total number of homicides and unsolved homicides for each city, state is provided in the table below. 
 
 ```{r}
@@ -115,11 +125,12 @@ homicide_counts %>%
   knitr::kable(digits = 1)
 ```
 
-Chicago, IL, Philadelphia, PA, and Houston, TX are the top three cities by total homicides. The table also presents the total number of unsolved homicides (those with disposition of “Closed without arrest” or “Open/No arrest”). Chicago, IL had the largest number of unsolved homicides with `r filter(homicide_counts, city_state == "Chicago, IL") %>% pull(n_unsolved_homicide)`. Baltimore, MD has the second largest number of unsolved homicides with `r filter(homicide_counts, city_state == "Baltimore, MD") %>% pull(n_unsolved_homicide)`. The city with the least unsolved homicides was Tampa, FL with `r filter(homicide_counts, city_state == "Tampa, FL") %>% pull(n_unsolved_homicide)`. Tulsa, AL had no unsolved homicides reported. 
+Chicago, IL, Philadelphia, PA, and Houston, TX are the top three cities by total homicides. The table also presents the total number of unsolved homicides (those with disposition of “Closed without arrest” or “Open/No arrest”). Chicago, IL had the largest number of unsolved homicides with `r filter(homicide_counts, city_state == "Chicago, IL") %>% pull(n_unsolved_homicide)`. Baltimore, MD has the second largest number of unsolved homicides with `r filter(homicide_counts, city_state == "Baltimore, MD") %>% pull(n_unsolved_homicide)`. The city with the least unsolved homicides was Tampa, FL with `r filter(homicide_counts, city_state == "Tampa, FL") %>% pull(n_unsolved_homicide)`.
 
-### Unsolved Homicides in Baltimore, MD
+#### Unsolved Homicides in Baltimore, MD
 
-One sample test of the proportion of unsolved homicides in Baltimore, MD using `prop.test`: 
+A one sample test of the proportion of unsolved homicides in Baltimore, MD using `prop.test` was conducted. The default `prop.test` assumes a probability of success of 0.5, and confidence level of 95% (alpha = 0.05). The estimate and 95% confidence interval is presented in the following table. 
+
 ```{r}
 baltimore_prop = prop.test(x = filter(homicide_counts, city_state == "Baltimore, MD") %>% pull(n_unsolved_homicide), 
           n = filter(homicide_counts, city_state == "Baltimore, MD") %>% pull(n_total_homicides)) %>% 
@@ -129,21 +140,35 @@ baltimore_prop %>% select(estimate, conf.low, conf.high) %>% knitr::kable(digits
 
 ```
 
+The high estimate proportion of `r baltimore_prop %>% pull(estimate)` unsolved homicides in Baltimore indicates that a large portion of homicides in Baltimore are often unresolved. 
 
-### Unsolved Homicides in All Cities
+#### Unsolved Homicides in All Cities
 
-Next, the proportion tests were carried out for the proportion of unsolved homicides for all cities.  
+Next, the `prop.test` function was carried out to estimate the proportion of unsolved homicides for all cities. The `prop.test` function was used with a `map` function and list column approach. `broom::tidy` was used to clean the results from the test output.  
+
 ```{r}
-homicide_counts %>% 
+homicide_prop_tests = homicide_counts %>% 
   mutate(prop_test = map2(.x = n_unsolved_homicide, .y = n_total_homicides, ~prop.test(x = .x, n = .y))) %>%
   mutate(prop_test = map(prop_test, broom::tidy)) %>% 
   unnest() %>% 
   select(city_state, estimate, conf.low, conf.high)
-
-        
-
-
 ```
 
+Next, a plot was created to visualize the estimated proportion of unsolved homicides by city/state. The graph was ordered by descending estimated proportions of unsolved homicides. The graph demonstrates that Chicago, New Orleans and Baltimore have the highest estimated proportion of unsolved homicides, while Richmond has the least. Tampa, FL falls fairly in the center of the graph. The error bar widths vary by city (due to different sample sizes), with cities such as San Bernadino having a wide interval, while Chicago has a narrow interval. 
 
+These data are important for indicating which cities have the greatest estimated proportions of unsolved homicides. This information can be used to target resources towards reducing the number of unsolved homicides in the areas of greatest impact.  
+
+```{r}
+homicide_prop_tests %>%
+  mutate(city_state = forcats::fct_reorder(city_state, desc(estimate))) %>% 
+  ggplot(aes(x = city_state, y = estimate)) +
+  geom_point() +
+  geom_errorbar(aes(x = city_state, ymin = conf.low, ymax = conf.high)) +
+   theme(axis.text.x=element_text(angle = 90, hjust = 1, vjust = 0.5),
+        text=element_text(size = 10)) +
+  labs(title = "Estimated Proportion of Unsolved Homicides by City",
+         x = "City, State",
+         y = "Estimate (95% CI error bar)")
+
+```
 
