--- a/p8105_hw5_dm3175.md
+++ b/p8105_hw5_dm3175.md
@@ -118,7 +118,7 @@ An error in the original data table listed "Tulsa, AL" as a location for one obs
 
 #### Total Homicides and Unsolved Homicides in All Cities
 
-The total number of homicides and unsolved homicides for each city, state is provided in the table below.
+The total number of homicides and unsolved homicides were summarized for each city, state in a dataframe `homicide_counts`. The `n_total_homicides` provides a count for total homicides, and `n_unsolved_homicide` a count for unsolved homicides (those with disposition of “Closed without arrest” or “Open/No arrest”).
 
 ``` r
 total_hom_count = clean_homicide_data %>% 
@@ -132,65 +132,9 @@ unsolved_hom_count = clean_homicide_data %>%
 
 homicide_counts = full_join(total_hom_count, unsolved_hom_count, by = "city_state") %>% 
   arrange(desc(n_total_homicides))
-
-homicide_counts %>% 
-  knitr::kable(digits = 1)
 ```
 
-| city\_state        |  n\_total\_homicides|  n\_unsolved\_homicide|
-|:-------------------|--------------------:|----------------------:|
-| Chicago, IL        |                 5535|                   4073|
-| Philadelphia, PA   |                 3037|                   1360|
-| Houston, TX        |                 2942|                   1493|
-| Baltimore, MD      |                 2827|                   1825|
-| Detroit, MI        |                 2519|                   1482|
-| Los Angeles, CA    |                 2257|                   1106|
-| St. Louis, MO      |                 1677|                    905|
-| Dallas, TX         |                 1567|                    754|
-| Memphis, TN        |                 1514|                    483|
-| New Orleans, LA    |                 1434|                    930|
-| Las Vegas, NV      |                 1381|                    572|
-| Washington, DC     |                 1345|                    589|
-| Indianapolis, IN   |                 1322|                    594|
-| Kansas City, MO    |                 1190|                    486|
-| Jacksonville, FL   |                 1168|                    597|
-| Milwaukee, wI      |                 1115|                    403|
-| Columbus, OH       |                 1084|                    575|
-| Atlanta, GA        |                  973|                    373|
-| Oakland, CA        |                  947|                    508|
-| Phoenix, AZ        |                  914|                    504|
-| San Antonio, TX    |                  833|                    357|
-| Birmingham, AL     |                  800|                    347|
-| Nashville, TN      |                  767|                    278|
-| Miami, FL          |                  744|                    450|
-| Cincinnati, OH     |                  694|                    309|
-| Charlotte, NC      |                  687|                    206|
-| Oklahoma City, OK  |                  672|                    326|
-| San Francisco, CA  |                  663|                    336|
-| Pittsburgh, PA     |                  631|                    337|
-| New York, NY       |                  627|                    243|
-| Boston, MA         |                  614|                    310|
-| Tulsa, OK          |                  584|                    193|
-| Louisville, KY     |                  576|                    261|
-| Fort Worth, TX     |                  549|                    255|
-| Buffalo, NY        |                  521|                    319|
-| Fresno, CA         |                  487|                    169|
-| San Diego, CA      |                  461|                    175|
-| Stockton, CA       |                  444|                    266|
-| Richmond, VA       |                  429|                    113|
-| Baton Rouge, LA    |                  424|                    196|
-| Omaha, NE          |                  409|                    169|
-| Albuquerque, NM    |                  378|                    146|
-| Long Beach, CA     |                  378|                    156|
-| Sacramento, CA     |                  376|                    139|
-| Minneapolis, MN    |                  366|                    187|
-| Denver, CO         |                  312|                    169|
-| Durham, NC         |                  276|                    101|
-| San Bernardino, CA |                  275|                    170|
-| Savannah, GA       |                  246|                    115|
-| Tampa, FL          |                  208|                     95|
-
-Chicago, IL, Philadelphia, PA, and Houston, TX are the top three cities by total homicides. The table also presents the total number of unsolved homicides (those with disposition of “Closed without arrest” or “Open/No arrest”). Chicago, IL had the largest number of unsolved homicides with 4073. Baltimore, MD has the second largest number of unsolved homicides with 1825. The city with the least unsolved homicides was Tampa, FL with 95.
+Chicago, IL (5535 homicides), Philadelphia, PA (3037 homicides), and Houston, TX (2942 homicides) are the top three cities by total homicides. The table also presents the total number of unsolved homicides (those with disposition of “Closed without arrest” or “Open/No arrest”). Chicago, IL had the largest number of unsolved homicides with 4073. Baltimore, MD has the second largest number of unsolved homicides with 1825. The city with the least unsolved homicides was Tampa, FL with 95.
 
 #### Unsolved Homicides in Baltimore, MD
 
