adjusted text in first paragraph

--- a/p8105_hw5_dm3175.md
+++ b/p8105_hw5_dm3175.md
@@ -9,7 +9,7 @@ Homework 5
 Problem 1
 ---------
 
-This problem investigates observation data from a longitudinal study with a control and experimental arm.
+This problem investigates observational data from a longitudinal study with a control and experimental arm.
 
 ### Load and Clean Data
 
